--- a/src/components/buttons/default/neutral/index.scss
+++ b/src/components/buttons/default/neutral/index.scss
@@ -6,7 +6,8 @@ $buttonPaddingTop: $minButtonWidth / 10;
 $anchorPaddingTop: ($minButtonWidth / 10) - 1;
 
 button.fz-btn--neu, a.fz-btn--neu,
-button.fz-btn[data-fz-btn-variant="neu"], a.fz-btn[data-fz-btn-variant="neu"] {
+button.fz-btn[data-fz-btn-variant="neu"], a.fz-btn[data-fz-btn-variant="neu"],
+button.fz-btn[data-fz-btn-variant="neu"]:not([data-fz-btn-type="details"]), a.fz-btn[data-fz-btn-variant="neu"]:not([data-fz-btn-type="details"]) {
   border-radius: 2px;
   background-color: $white;
   border: solid 1px $grey;
@@ -31,12 +32,13 @@ button.fz-btn[data-fz-btn-variant="neu"], a.fz-btn[data-fz-btn-variant="neu"] {
 }
 
 button.fz-btn--neu,
-button.fz-btn[data-fz-btn-variant="neu"] {
+button.fz-btn[data-fz-btn-variant="neu"],
+button.fz-btn[data-fz-btn-variant="neu"]:not([data-fz-btn-type="details"]) {
   padding: $buttonPaddingTop;
 }
 
 a.fz-btn--neu,
-a.fz-btn[data-fz-btn-variant="neu"] {
+a.fz-btn[data-fz-btn-variant="neu"], a.fz-btn[data-fz-btn-variant="neu"]:not([data-fz-btn-type="details"]) {
   padding: $anchorPaddingTop;
   text-decoration: none;
   &:hover {
