--- a/src/components/buttons/default/positive/index.scss
+++ b/src/components/buttons/default/positive/index.scss
@@ -7,7 +7,8 @@ $buttonPaddingTop: $minButtonWidth / 10;
 $anchorPaddingTop: ($minButtonWidth / 10) - 1;
 
 button.fz-btn--pos, a.fz-btn--pos,
-button.fz-btn[data-fz-btn-variant="pos"], a.fz-btn[data-fz-btn-variant="pos"] {
+button.fz-btn[data-fz-btn-variant="pos"], a.fz-btn[data-fz-btn-variant="pos"],
+button.fz-btn[data-fz-btn-variant="pos"]:not([data-fz-btn-type="details"]), a.fz-btn[data-fz-btn-variant="pos"]:not([data-fz-btn-type="details"]) {
   border-radius: 2px;
   background-color: $green;
   border: solid 1px $green;
@@ -32,12 +33,14 @@ button.fz-btn[data-fz-btn-variant="pos"], a.fz-btn[data-fz-btn-variant="pos"] {
 }
 
 button.fz-btn--pos,
-button.fz-btn[data-fz-btn-variant="pos"] {
+button.fz-btn[data-fz-btn-variant="pos"],
+button.fz-btn[data-fz-btn-variant="pos"]:not([data-fz-btn-type="details"]) {
   padding: $buttonPaddingTop;
 }
 
 a.fz-btn--pos,
-a.fz-btn[data-fz-btn-variant="pos"] {
+a.fz-btn[data-fz-btn-variant="pos"],
+a.fz-btn[data-fz-btn-variant="pos"]:not([data-fz-btn-type="details"]) {
   padding: $anchorPaddingTop;
   text-decoration: none;
   &:hover {
