--- a/src/components/buttons/details/primary/index.scss
+++ b/src/components/buttons/details/primary/index.scss
@@ -19,6 +19,7 @@ a.fz-btn[data-fz-btn-variant="pri"][data-fz-btn-type="details"], button.fz-btn[d
   border: solid 1px #e0dfdf;
   color: #65beb9;
   cursor: pointer;
+  padding: unset;
   &:hover, &:active {
     background-color: #ffffff;
     border: solid 1px #e0dfdf;
@@ -44,6 +45,7 @@ button.fz-btn[data-fz-btn-variant="pri"][data-fz-btn-type="details"] {
   -webkit-flex-wrap: wrap;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
+  font-weight: normal;
   font-size: $font-size;
   -webkit-justify-content: center;
   margin: 0 auto;
